--- a/q2a.html
+++ b/q2a.html
@@ -10,7 +10,7 @@
   <body>
     <h1 id="heading">Add club event</h1>
 
-    <!-- form to capture club event data -->
+    <!-- Form to capture club event data -->
     <form id="club-event-form" action="https://students.open.ac.uk/mct/tt284/reflect/reflect.php" method="post">	
       <input type="hidden" id="SessionIdentifier" name="SessionIdentifier" value="ff53-dd45-dcba9876-9090">
 	  <div class="form-group">
